--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             </div>
             <div>
               <h6 class="title is-6">What if I don't have a team or an idea ?</h6>
-              <p>Not to worry, most people don’t! We’ll have team formation and ideation event geared towards helping
+              <p>Not to worry, most people don’t! We’ll have team formation and ideathon event geared towards helping
                 you
                 find people to work with. You can join our <a href="https://www.facebook.com/groups/hackfestktm/">
                   Facebook Group</a> to find potential
