--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             <p class="title">
               Hack Fest Kathmandu
             </p>
+            <a href="https://forms.gle/yLBZKeAocKknpkCe8" target="_blank" class="button is-medium has-padding-left-5 has-padding-right-5 has-margin-bottom-7">Apply Now</a> 
+            <br />
+
             <a href="https://www.facebook.com/groups/hackfestktm/" class="button is-link"><i class="fa fa-facebook" style="margin-right: 12px;"></i>Join us on Facebook</a>
-            <!-- <a class="button is-medium has-margin-top-6 has-padding-left-5 has-padding-right-5">Apply Now</a> -->
           </div>
         </div>
 
