--- a/index.html
+++ b/index.html
@@ -334,6 +334,15 @@
         </div>
     </section>
 
+    <section class="section is-small">
+      <h4 class="title is-5 is-spaced has-text-centered">Prizes</h4>
+      <div class="container">
+        <div class="columns" style="max-width: 600px; margin: 0 auto; display: flex; justify-content: center;">
+          <p>Prizes will be announced soon.</p>
+        </div>
+    </section>
+
+
 <!-- 
     <section class="section is-small">
         <h4 class="title is-5 is-spaced has-text-centered">Prizes</h4>
