Update sponsors and supporters

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="css/main.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet"></head>
+</head>
 
 <body class="hackfestktm">
   <section class="hero hero-hackathon is-link">
@@ -137,7 +137,7 @@
 
                 <div class="media">
                   <div class="media-content has-text-centered">
-                    <p class="title is-6">09:00 AM - 05:00 PM</p>
+                    <p class="title is-6">08:00 AM - 05:00 PM</p>
                   </div>
                 </div>
 
@@ -191,15 +191,28 @@
           </div>
 
           <div class="has-padding-6">
-            <h4 class="title is-5 is-spaced has-text-centered">Sponsors</h4>
+            <h4 class="title is-5 is-spaced has-text-centered">Title Sponsor</h4>
 
             <div class="partners-list">
                 <a href="http://scst.edu.np/" target="_blank">
                   <img src="/images/hackfest/sagarmatha.jpg" alt="Sagarmatha College of Science & Technology">
                 </a>
+                <a href="http://www.sagarmatha.edu.np" target="_blank">
+                  <img src="/images/hackfest/sec.png" alt="Sagarmatha Engineering College">
+                </a>
             </div>
-
           </div>
+
+          <div class="has-padding-6">
+            <h4 class="title is-5 is-spaced has-text-centered">Platinum Sponsor</h4>
+
+            <div class="partners-list">
+                <a href="https://www.genesesofts.com/" target="_blank">
+                  <img src="/images/hackfest/genese.png" alt="Genese Solutions">
+                </a>
+            </div>
+          </div>
+
           <div class="has-padding-6">
             <h4 class="title is-5 is-spaced has-text-centered">Venue Partner</h4>
 
@@ -213,6 +226,9 @@
             <div class="partners-list">
             <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
               <img src="/images/hackfest/devc.png" alt="Facebook Developer Circles kathmandu">
+            </a>
+            <a href="https://www.fusemachines.com.np" target="_blank">
+              <img src="/images/hackfest/fusemachines.png" alt="Fusemachines Nepal">
             </a>
             <a href="https://www.facebook.com/flutterNP/" target="_blank">
               <img src="/images/hackfest/flutter.svg" alt="Flutter Nepal">
@@ -278,6 +294,7 @@
             <div class="timeline-content">
               <p class="heading">November 23, 2019</p>
               <p>Hack Fest Pre Event (Team formation / Ideathon)</p>
+              <span style="opacity: .7">Fusemachines AI Center, Hattisar, Ktm</span>
             </div>
           </div>
           <div class="timeline-item is-danger">
@@ -499,13 +516,22 @@
 
 
         <div class="has-margin-bottom-4">
-          <h4 class="title is-5 has-margin-bottom-6">Sponsors</h2>
+          <h4 class="title is-5 has-margin-bottom-6">Title Sponsors</h2>
             <div class="has-margin-bottom-5">
               <h4 class="title is-6 has-margin-bottom-7">
                 <a href="https://www.facebook.com/BScSCST/" target="_blank">Sagarmatha College of Science and Technology</a>
               </h4>
               <p>
                   Sagarmatha College of Science and Technology was established by a group of professionals dedicated to excellence in IT education in the year 2011, under the affiliation of Tribhuvan University. An educational institution that strives to provide quality education in the field of Computer Science and Information Technology, Sagarmatha currently conducts a four year bachelor level course; B. Sc. in Computer Science and Information Technology (B. Sc. CSIT).
+              </p>
+            </div>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/college.sagarmatha/" target="_blank">Sagarmatha Engineering College</a>
+              </h4>
+              <p>
+                Sagarmatha Engineering College was established in 2010 under the affiliation of Tribhuvan University. Within less than a decade of its inception, it has been one of the top most choices for future engineers.
+                The college provides latest and up-to-date courses to mould engineers so as to compete with changing world in the engineering streams.
               </p>
             </div>
         </div>
@@ -537,6 +563,16 @@
                 sharing.
               </p>
             </div>
+
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/fusemachinesnepal/" target="_blank">Fusemachines Nepal</a>
+              </h4>
+              <p>
+                Fusemachines is an artificial intelligence company providing talent and education solutions in order to democratize AI worldwide. It helps organizations identify opportunities where AI can be best utilized to transform and grow their business. 
+              </p>
+            </div>
+
 
             <div class="has-margin-bottom-5">
               <h4 class="title is-6 has-margin-bottom-7">
@@ -719,6 +755,6 @@
 
   </script>
 
-<script type="text/javascript" src="js/script.js"></script></body>
+</body>
 
 </html>
