--- a/index.html
+++ b/index.html
@@ -536,6 +536,18 @@
             </div>
         </div>
 
+        <div class="has-margin-bottom-4">
+          <h4 class="title is-5 has-margin-bottom-6">Platinum Sponsor</h2>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.genesesofts.com/" target="_blank">Genese Software Solution</a>
+              </h4>
+              <p>
+                Genese is an enthusiastic workforce providing cloud and information technology services to the emerging enterprise organizations. They are also the only AWS Consulting Partner for Nepal.
+              </p>
+            </div>
+        </div>
+
 
         <div class="has-margin-bottom-4">
           <h4 class="title is-5 has-margin-bottom-6">Venue Partner</h2>
