--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         </section>
 
         <section class="section is-small">
-            <h4 class="title is-5 is-spaced has-text-centered">Chanllenges</h4>
+            <h4 class="title is-5 is-spaced has-text-centered">Challenges</h4>
             <div class="container">
                 <div class="columns" style="flex-wrap: wrap;">
                     <div class="column is-half">
