--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
 
                 <div class="columns">
 
-                  <div class="column">
+                    <p>Further details will be available soon.</p>
+
+                  <!-- <div class="column">
                       <h1 class="title is-2"><span>Rs</span> 15,000</h1>
                       <span>First Prize</span>
                   </div>
@@ -331,7 +333,7 @@
                   <div class="column">
                       <h1 class="title is-2"><span>Rs</span> 5,000</h1>
                       <span>Third Prize</span>
-                  </div>
+                  </div> -->
 
                 </div>
 
