--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                   </div>
                 </div>
 
-                <div class="columns">
+                <div class="columns" style="justify-content: center;">
 
                     <p>Further details will be available soon.</p>
 
