--- a/index.html
+++ b/index.html
@@ -204,6 +204,14 @@
                     </div>
 
                     <div class="has-padding-6">
+                        <h4 class="title is-5 is-spaced has-text-centered">Digital Partner</h4>
+
+                        <a href="https://www.khalti.com/" target="_blank">
+                            <img src="/images/hackfest/khalti-logo.png" alt="Khalti">
+                        </a>
+                    </div>
+
+                    <div class="has-padding-6">
                         <h4 class="title is-5 is-spaced has-text-centered">Venue Partner</h4>
 
                         <a href="https://www.lftechnology.com/" target="_blank">
@@ -309,11 +317,18 @@
 
                 <div class="columns">
                   <div class="column">
-                      <div class="notification">
-                    Thanks to our platinum sponsor <strong>Genese</strong>, every attendees will get $75 of AWS credits through the AWS Educate program and up to $500 AWS credits for attendees with startup companies. 
+                      <div class="notification is-link">
+                    Thanks to our platinum sponsor <strong>Genese</strong>, every attendees will get <strong>$75 of AWS credits </strong> through the AWS Educate program and up to <strong>$500 AWS credits </strong> for attendees with startup companies. 
                           
                         </div>
                   </div>
+
+                 <div class="column">
+                    <div class="notification is-info">
+                        Khalti Wallet will be providing movie tickets worth <strong>Rs 5,000.</strong> Every participant will be getting a coupon worth <strong> Rs 100 </strong> for movie ticket. 
+                      </div>
+                 </div>
+                  
                 </div>
 
                 <div class="columns" style="justify-content: center;">
@@ -529,6 +544,17 @@
                 Genese is an enthusiastic workforce providing cloud and information technology services to the emerging enterprise organizations. They are also the only AWS Consulting Partner for Nepal.
             </p>
         </div>
+        </div>
+
+        <div class="has-margin-bottom-4">
+            <h4 class="title is-5 has-margin-bottom-6">Digital Partner</h2>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://khalti.com" target="_blank">Khalti</a>
+              </h4>
+            <p>
+                    Khalti is a mobile wallet, payment gateway & service provider in Nepal. Launched in January 2017, Khalti is an emerging online payment solution in Nepal. It allows users to pay for a range of services like basic utility payments, hotel bookings, movie and domestic flight tickets, events and many more.
+            </p>
         </div>
 
         <div class="has-margin-bottom-4">
