--- a/index.html
+++ b/index.html
@@ -268,22 +268,6 @@
                             <span style="opacity: .7">Fusemachines Nepal Hall, Hattisar</span>
                         </div>
                     </div>
-                    <!-- <div class="timeline-item is-primary">
-                  <div class="timeline-marker is-primary">
-                  </div>
-                  <div class="timeline-content">
-                    <p class="heading">September October 1, 2019</p>
-                    <p>Deadline for registration</p>
-                  </div>
-                </div> -->
-                    <!-- <div class="timeline-item is-primary">
-                  <div class="timeline-marker is-primary">
-                  </div>
-                  <div class="timeline-content">
-                    <p class="heading">October 19, 2019</p>
-                    <p>Workshop on React</p>
-                  </div>
-                </div> -->
                     <div class="timeline-item is-danger">
                         <div class="timeline-marker is-danger is-icon">
                             <i class="fa fa-flag"></i>
@@ -415,6 +399,34 @@
             </div>
                 </div>
         </section>
+
+        <section class="section is-small">
+                <h4 class="title is-5 is-spaced has-text-centered">How to apply</h4>
+                <div class="container">
+                        <div class="steps" id="stepsDemo">
+                                <div class="step-item is-active is-success">
+                                  <div class="step-marker">1</div>
+                                  <div class="step-details">
+                                    <p class="step-title">Register</p>
+                                    <p>Apply through our <a href="https://forms.gle/yLBZKeAocKknpkCe8" target="_blank">online form. </a> </p>
+                                  </div>
+                                </div>
+                                <div class="step-item">
+                                  <div class="step-marker">2</div>
+                                  <div class="step-details">
+                                    <p class="step-title">Payment</p>
+                                    <p>Wait for confirmation email for payment.</p>
+                                  </div>
+                                </div>
+                                <div class="step-item">
+                                  <div class="step-marker">3</div>
+                                  <div class="step-details">
+                                    <p class="step-title">Confirmation</p>
+                                    <p>Confirm your payment <a href="https://forms.gle/SfaYCRNhFvsDKVke7" target="_blank"> here. </a></p>
+                                  </div>
+                                </div>
+                </div>
+            </section>
 
         <section class="section is-small">
             <div class="container">
