payment detail update

--- a/index.html
+++ b/index.html
@@ -411,18 +411,19 @@
                                     <p>Apply through our <a href="https://forms.gle/yLBZKeAocKknpkCe8" target="_blank">online form. </a> </p>
                                   </div>
                                 </div>
+
+                                <div class="step-item">
+                                    <div class="step-marker">2</div>
+                                    <div class="step-details">
+                                      <p class="step-title">Confirmation</p>
+                                      <p>We will review the form and send a confirmation email</p>
+                                    </div>
+                                  </div>
                                 <div class="step-item">
                                   <div class="step-marker">2</div>
                                   <div class="step-details">
                                     <p class="step-title">Payment</p>
-                                    <p>Wait for confirmation email for payment.</p>
-                                  </div>
-                                </div>
-                                <div class="step-item">
-                                  <div class="step-marker">3</div>
-                                  <div class="step-details">
-                                    <p class="step-title">Confirmation</p>
-                                    <p>Confirm your payment <a href="https://forms.gle/SfaYCRNhFvsDKVke7" target="_blank"> here. </a></p>
+                                    <p>Pay through Khalti <a href="https://khalti.com/event/hack-fest-kathmandu" target="_blank">here.</a> You will receive 10% cash back on payment.</p>
                                   </div>
                                 </div>
                 </div>
