Update prize money

--- a/index.html
+++ b/index.html
@@ -318,21 +318,23 @@
                 <div class="columns" style="justify-content: center;">
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 15,000</h1>
+                      <h1 class="title is-2"><span>Rs</span> 25,000<sup>*</sup></h1>
                       <span>First Prize</span>
                   </div>
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 8,000</h1>
+                      <h1 class="title is-2"><span>Rs</span> 15,000<sup>*</sup></h1>
                       <span>Second Prize</span>
                   </div>
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 5,000</h1>
+                      <h1 class="title is-2"><span>Rs</span> 5,000<sup>*</sup></h1>
                       <span>Third Prize</span>
                   </div>
 
                 </div>
+
+                <small>Terms and conditions apply. </small>
 
                 </div>
         </section>
