--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
                 </div>
 
-                <small>Terms and conditions apply. </small>
+                <small>Terms and conditions apply. Might be subjected to tax deduction.</small>
 
                 </div>
         </section>
