--- a/index.html
+++ b/index.html
@@ -318,23 +318,21 @@
                 <div class="columns" style="justify-content: center;">
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 25,000<sup>*</sup></h1>
+                      <h1 class="title is-2"><span>Rs</span> 25,000</h1>
                       <span>First Prize</span>
                   </div>
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 15,000<sup>*</sup></h1>
+                      <h1 class="title is-2"><span>Rs</span> 15,000</h1>
                       <span>Second Prize</span>
                   </div>
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 5,000<sup>*</sup></h1>
+                      <h1 class="title is-2"><span>Rs</span> 5,000</h1>
                       <span>Third Prize</span>
                   </div>
 
                 </div>
-
-                <small>Terms and conditions apply. Might be subjected to tax deduction.</small>
 
                 </div>
         </section>
@@ -592,7 +590,7 @@
                   Kathmandu</a>
               </h4>
         <p>
-            Developer Circles from Facebook is a program designed to create locally organized communities for students and developers. These communities are meant to educate and provide a forum for discussion and knowledge sharing.
+            Developer Circles from Facebook are communities of innovators, where aspiring and experienced engineers receive free tools to build new skills, grow ideas and boost their careers.
         </p>
     </div>
 
