--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@
 
                 </div>
 
+                <small>Disclamair: Prize money is subjected to TDS</small>
+
                 </div>
         </section>
 
