remove how to apply

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
                 </div>
 
-                <small>Disclamair: Prize money is subjected to TDS</small>
+                <small>Disclaimer: Prize money is subjected to TDS</small>
 
                 </div>
         </section>
@@ -399,36 +399,7 @@
             </div>
                 </div>
         </section>
-
-        <section class="section is-small">
-                <h4 class="title is-5 is-spaced has-text-centered">How to apply</h4>
-                <div class="container">
-                        <div class="steps" id="stepsDemo">
-                                <div class="step-item is-active is-success">
-                                  <div class="step-marker">1</div>
-                                  <div class="step-details">
-                                    <p class="step-title">Register</p>
-                                    <p>Apply through our <a href="https://forms.gle/yLBZKeAocKknpkCe8" target="_blank">online form. </a> </p>
-                                  </div>
-                                </div>
-
-                                <div class="step-item">
-                                    <div class="step-marker">2</div>
-                                    <div class="step-details">
-                                      <p class="step-title">Confirmation</p>
-                                      <p>We will review the form and send a confirmation email</p>
-                                    </div>
-                                  </div>
-                                <div class="step-item">
-                                  <div class="step-marker">2</div>
-                                  <div class="step-details">
-                                    <p class="step-title">Payment</p>
-                                    <p>Pay through Khalti <a href="https://khalti.com/event/hack-fest-kathmandu" target="_blank">here.</a> You will receive 10% cash back on payment.</p>
-                                  </div>
-                                </div>
-                </div>
-            </section>
-
+        
         <section class="section is-small">
             <div class="container">
 
