--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     <div class="column is-6">
                         <div>
                             <h6 class="title is-6">Who can participate?</h6>
-                            <p>We are focusing this hackathon for the high school students related to IT. So, if you are a bachelor level student or just completed your bachelor degree, you can join the hackathon. A team of great mentors will be there to advise and guide you each step of the way to complete your project.</p>
+                            <p>We are focusing this hackathon for the high school students related to IT. So, if you are a bachelor level student or just completed your bachelor degree not more than a year, you can join the hackathon. A team of great mentors will be there to advise and guide you each step of the way to complete your project.</p>
                         </div>
                         <div>
                             <h6 class="title is-6">How big can be a team ?</h6>
