--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div class="tabs is-boxed">
                     <ul>
                         <li class="tab is-active" onclick="openHackFestTab(event,'home')"><a>Home</a></li>
+                        <li class="tab" onclick="openHackFestTab(event,'projects')"><a>Projects</a></li>
                         <li class="tab" onclick="openHackFestTab(event,'about')"><a>About</a></li>
                         <li class="tab" onclick="openHackFestTab(event,'workshops')"><a>Workshops</a></li>
                         <li class="tab" onclick="openHackFestTab(event,'rules')"><a>Rules & Regulations</a></li>
@@ -459,6 +460,174 @@
 
         </div>
         <!-- Home -->
+
+                <!-- Projects -->
+                <div id="projects" class="content-tab" style="display: none;">
+                    <section class="section is-small">
+                        <div class="container worshops-columns">
+                            <table class="table table is-fullwidth is-striped" >
+                                <thead>
+                                    <tr>
+                                        <th>S.N</th>
+                                        <th>Team</th>
+                                        <th>Members</th>
+                                        <th>Technology</th>
+                                        <th>Project Description</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Hello World (1st Runner Up)</td>
+                                        <td>Yachu Joshi, Shaan Baidya & Sudin Shrestha</td>
+                                        <td>Vanilla JS</td>
+                                        <td>Educational Sites</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>bSharp (Winner)</td>
+                                        <td>Bibek Timilsina, Mitesh Pandey, Alex Bhattarai, Bibek Dhakal & Santosh RIjal</td>
+                                        <td>Flutter, NodeJS, MongoDB & Python</td>
+                                        <td> Booksaat where main aim is to exchange books through online platform between two persons according to the interest and recommendation done by the filter.
+                                            Also the unique concept was implementation a AI feature in it by using OCR i.e.you can scan a book cover and search for related topics ,without typing the author and book name.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>The Element</td>
+                                        <td>Shreya Basnet, Chirayu Oli, Newton Poudel, Saroj Dahal & Sushan Thapa</td>
+                                        <td>Django, Laravel, CSS / Bootstra, SQL Lite</td>
+                                        <td>Pets Nepal (Pets adoption & Pet Services)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>4 Tuples</td>
+                                        <td>Rachita Maharja, Ila Ahikari, Bijina Remgi & Sanjiwani Jha</td>
+                                        <td>CSS/Bootstra, Nodejs, Express, MongoDB</td>
+                                        <td>Connecting Pharmacies</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>Team Red</td>
+                                        <td>Meshuka Rayamajhi, Nasla Joshi, Riya Acharya, Upasana Pradhan & Sushmita Rai</td>
+                                        <td>Nodejs, Express, MongoDB</td>
+                                        <td>Finding the registere blood donors & informations. Providing</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Team Classroom</td>
+                                        <td></td>
+                                        <td>React, Firebase</td>
+                                        <td>Providing assistance for pregnant women</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>Team Pink (2nd Runner Up)</td>
+                                        <td>Kalpana Joshi, Aditi Khanal, Ashmita Tiwari</td>
+                                        <td>Nodejs, Express, MongoDB</td>
+                                        <td>Providing assistance for pregnant women</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Team Tantra</td>
+                                        <td>Ujwal Aryal, Sushant Gawali, Bijay Baskoti</td>
+                                        <td>Java, Android SDK</td>
+                                        <td>Providing nutritional information of various fruits & vegetables</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9</td>
+                                        <td>Team Phoenix</td>
+                                        <td>Aakash Shakya, Yogesh Bhattari</td>
+                                        <td>Python, Django</td>
+                                        <td>Utilizing the used books for social cause</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Bit changer</td>
+                                        <td>Lalit Sunar</td>
+                                        <td>Node, Handlenbars, MaterialCSS, MongoDB</td>
+                                        <td>Travelling app for travellers for visit year 2020</td>
+                                    </tr>
+                                    <tr>
+                                        <td>11</td>
+                                        <td>Team Noobies</td>
+                                        <td>Mamata Poudel, Sachyam Tiwari, Prasiddha Bhurtel, Raj Maharjan</td>
+                                        <td>Wordpress, MySQL</td>
+                                        <td>This platform gives users to see art through eyes of the artists. Letting normal people with no prior knowledge about art and also create a platform to make transaction of paintings connecting buier & artist</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Team Aviantas</td>
+                                        <td>Ananda Poudel, Anish Wagle, Ashish Sharma</td>
+                                        <td>Dot Net, Sql, Bootstrap</td>
+                                        <td>This is a web app for person curious about research paper study & student facing problem to find the research paper for their project creation. We allow recommentation system which is content based acoording to the papers readers visit.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>13</td>
+                                        <td>Team Enigma</td>
+                                        <td>Garima Subedi, Shraddha Bhuju, Ankita Dixit, Yunip Lal Shrestha</td>
+                                        <td>PHP, Laravel, SQL, Bootstrap</td>
+                                        <td>A webapp that makes your medical reports online. The users can decide which hospital can access their reports</td>
+                                    </tr>
+                                    <tr>
+                                        <td>14</td>
+                                        <td>Team Kanchanjunga</td>
+                                        <td>Ankit Subedi, Shreedev Sharma, Prasanna Guragain</td>
+                                        <td>Java</td>
+                                        <td>Webpage for mental illness</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Team Mt. Everest</td>
+                                        <td>Gaurav Shah, Upendra Pd. Neupane, Roshan Acharya</td>
+                                        <td>JS, PHP</td>
+                                        <td>Online portal to seek minor helps</td>
+                                    </tr>
+                                    <tr>
+                                        <td>16</td>
+                                        <td>Change maker</td>
+                                        <td>Prerana Pandit, Sanjeeb Lama, Ashish Karki, Raznesh Prajapati, Tilak Acharya</td>
+                                        <td>Mental heal problem awareness featuring podcast & quotes</td>
+                                    </tr>
+                                    <tr>
+                                        <td>17</td>
+                                        <td>Videha</td>
+                                        <td>Rachin Kalakheti, Sarthak Sharma</td>
+                                        <td>Unity</td>
+                                        <td>An interactive learning system for students to promote visualization & interaction</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18</td>
+                                        <td>Beginner</td>
+                                        <td>Bibeknand Kushwaha, Kiran Kumar Giri</td>
+                                        <td>Android Studio (Kotli)</td>
+                                        <td>To attract tourists in Nepal & develop tourish industry through technology</td>
+                                    </tr>
+                                    <tr>
+                                        <td>19</td>
+                                        <td>Team Noob</td>
+                                        <td>Rajan Khadka, Sanjeev Das, Reshma Kunwar</td>
+                                        <td>Nodejs, Figma, Firebase</td>
+                                        <td>It is a platform for digital & non digital arts to enhance & showcase works of artists. The app enables artists to sell their works. This project also covers two themes: art & employment</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>DevKec</td>
+                                        <td>Pawan Acharya, Kamal Aryal, Nitesh Rijal</td>
+                                        <td>Php, MySql, Bootstrap</td>
+                                        <td>In this web application, we target to feed/help the needy people with food/clothes etc. So this project is mainly about helping each other. </td>
+                                    </tr>
+                                    <tr>
+                                        <td>21</td>
+                                        <td>Team Jack</td>
+                                        <td>Sudip Neupane, Pratham Shrestha, Bishal Karkim, Sachin Timilsina</td>
+                                        <td>Php, MySql, Bootstrap, JS</td>
+                                        <td>In this platform, we are promoting paintings, graffiti  as a form of    ar where users can interact with the artists and trade with artists to make their surrounding galonic.</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            </div>
+                            </section>
+            </div>
 
         <!-- About -->
         <div id="about" class="content-tab" style="display: none;">
