--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
                                         <td>16</td>
                                         <td>Change maker</td>
                                         <td>Prerana Pandit, Sanjeeb Lama, Ashish Karki, Raznesh Prajapati, Tilak Acharya</td>
+                                        <td>Laravel, Vuejs</td>
                                         <td>Mental heal problem awareness featuring podcast & quotes</td>
                                     </tr>
                                     <tr>
